# discretionary_engine

./: .envrc  .gitignore  .gitmodules  .local.sh  .pre-commit-config.yaml  .pre-commit-hooks.yml  Cargo.toml  README.md  TODO.md  diagraph.typ  docs.md  flake.nix  run.sh  typescript
.cargo/: config.toml
.config/tracey/: config.kdl
.direnv/: flake-profile-1-link  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.github/workflows/: ci.yml  plus-r-merge.yml
.readme_assets/: description.md  other.md  usage.md
discretionary_engine/: Cargo.toml
discretionary_engine/src/: adjust_pos.rs  bybit_common.rs  chase_limit.rs  config.rs  main.rs  nuke.rs  positions.rs  risk.rs  shell_init.rs  test_settings.rs  utils.rs  ws_chase_limit.rs
discretionary_engine/src/exchange_apis/: exchanges.rs  hub.rs  mod.rs  order_types.rs
discretionary_engine/src/exchange_apis/binance/: info.rs  mod.rs  orders.rs
discretionary_engine/src/exchange_apis/bybit/: mod.rs
discretionary_engine/src/protocols/: approaching_limit.rs  dummy_market.rs  mod.rs  sar.rs  trailing_stop.rs
discretionary_engine_macros/: Cargo.toml
discretionary_engine_macros/src/: lib.rs
discretionary_engine_macros/tests/: main.rs  protocol_wrapper.rs
discretionary_engine_risk/: Cargo.toml  README.md
discretionary_engine_risk/src/: lib.rs
discretionary_engine_risk/src/risk_layers/: from_phone.rs  lost_last_trade.rs  mod.rs  stop_loss_proximity.rs
discretionary_engine_strategy/: Cargo.toml
discretionary_engine_strategy/src/: commands.rs  config.rs  lib.rs  main.rs  order_types.rs  redis_bus.rs  start.rs  strategy.rs
discretionary_engine_strategy/src/data/: bybit.rs  mod.rs
discretionary_engine_strategy/src/protocols/: dummy_market.rs  mod.rs
docs/: ARCHITECTURE.md  other.rnote  unstructured.md
docs/spec/: protocol.md
examples/: config.toml
src/: binance.rs  binance_api.rs  config.rs  exchange_interactions.rs  follow.rs  lib.rs  main.rs  positions.rs  protocols.rs  protocols.rs.bak  trail.rs  utils.rs
src/api/: binance.rs  mod.rs  order_types.rs
src/api/binance/: info.rs  mod.rs  orders.rs
src/exchange_apis/: exchanges.rs  hub.rs  mod.rs  order_types.rs
src/exchange_apis/binance/: info.rs  mod.rs  orders.rs
src/protocols/: .trailing_stop.rs.pending-snap  approaching_limit.rs  dummy_market.rs  mod.rs  sar.rs  trailing_stop.rs
tmp/: macros_expanded.rs
