# cargo-features = ["codegen-backend"]  # disabled due to aws-lc-rs incompatibility

[workspace]
members = ["discretionary_engine", "discretionary_engine_*"]
exclude = ["libs"]
resolver = "3"

default-members = ["discretionary_engine"]

[workspace.lints.rust]
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
float_cmp = "allow"
len_zero = "allow"
comparison_to_empty = "allow"
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"

[workspace.dependencies]
clap = { version = "^4.5.53", features = ["derive", "env"] }
color-eyre = "^0.6.5"
insta = { version = "1.45.0", features = ["json"] }
jiff = "^0.2.17"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "^1.0.228", features = ["derive"] }
smart-default = "^0.7.1"
snapshot_fonts = "1.2.0"
strum = { version = "0.27", features = ["derive"] }
tracing = { version = "^0.1.44", features = ["log", "std", "async-await"] }
v_exchanges = { version = "^0.16.7", features = ["full"] }
v_utils = { version = "2.15.11", features = ["full"] }

#[patch.crates-io]
#v_utils = { path = "../v_utils/v_utils" }
#v_utils_macros = { path = "../v_utils/v_utils_macros" }

[profile.dev]
# codegen-backend = "cranelift"  # disabled due to aws-lc-rs incompatibility
