cargo-features = ["codegen-backend"]

[package]
name = "discretionary_engine"
version = "1.0.0"
authors = ["Valera <valeratrades@gmail.com>"]
categories = ["finance"]
description = "LaTeX of trading"
documentation = "https://docs.rs/discretionary_engine"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/valeratrades/discretionary_engine"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
chrono = "^0.4.42"
clap = { version = "^4.5.53", features = ["derive"] }
color-eyre = "^0.6.5"
config = "0.15.19"
console-subscriber = "0.5.0"
derive-new = "0.7.0"
discretionary_engine_macros = { path = "../discretionary_engine_macros", version = "^0.1.1" }
eyre = "0.6.12"
function_name = "0.3.0"
futures-util = "0.3.31"
hex = "^0.4.3"
hmac = "^0.12.1"
insta = { version = "1.44.1", features = ["json"] }
rand = { version = "0.9.2", features = ["small_rng"] }
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.145"
serde_path_to_error = "0.1.20"
serde_urlencoded = "^0.7.1"
serde_with = "^3.16.0"
sha2 = "^0.10.9"
tokio = { version = "^1.48.0", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tracing = { version = "^0.1.41", features = ["log", "std", "async-await"] }
tracing-bunyan-formatter = "0.3.10"
tracing-error = "0.2.1"
tracing-log = "0.2.0"
tracing-subscriber = { version = "^0.3.20", features = ["fmt", "json", "registry", "env-filter"] }
url = "^2.5.7"
uuid = { version = "^1.18.1", features = ["serde", "v4", "v7", "v8"] }
v_exchanges = { path = "../../v_exchanges/v_exchanges", features = ["full" ] }
v_utils = { version = "2.9.8", features = ["full"] }

[dev-dependencies]
lazy_static = "1.5.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html#[[test]]#name = "tests"#path = "tests/main.rs"##[dev-dependencies]#trybuild = { version = "^1.0.89", features = ["diff"]}

# wait, so does it work or no?
[lints.clippy]
cmp_float = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
#get_first = "allow" # const fn, so actually more performant
len_zero = "allow" # `.empty()` is O(1) but on &str only
comparison_to_empyt = "allow" # same reasons as `len_zero`

[profile.dev]
codegen-backend = "cranelift" #ga: comment out
