cargo-features = ["codegen-backend"]

[package]
name = "discretionary_engine"
version = "1.0.0"
authors = ["Valera <valeratrades@gmail.com>"]
categories = ["finance"]
description = "LaTeX of trading"
documentation = "https://docs.rs/discretionary_engine"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/valeratrades/discretionary_engine"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
chrono = "^0.4.42"
clap = { workspace = true }
clap_complete = "4.5.60"
color-eyre = { workspace = true }
config = "0.15.19"
console-subscriber = "0.5.0"
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["from_str", "display"] }
discretionary_engine_macros = { path = "../discretionary_engine_macros", version = "^0.1.1" }
discretionary_engine_risk = { path = "../discretionary_engine_risk", version = "1.0.0" }
eyre = "0.6.12"
function_name = "0.3.0"
futures-util = "0.3.31"
hex = "^0.4.3"
hmac = "^0.12.1"
jiff = { workspace = true }
nautilus-bybit = { path = "/home/v/g/nautilus_trader/crates/adapters/bybit", default-features = false }
nautilus-model = { path = "/home/v/g/nautilus_trader/crates/model" }
rand = { version = "0.9.2", features = ["small_rng"] }
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
secrecy = { workspace = true }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.145"
serde_path_to_error = "0.1.20"
serde_urlencoded = "^0.7.1"
serde_with = "^3.16.0"
sha2 = "^0.10.9"
snapshot_fonts = { workspace = true }
strum = { workspace = true }
tokio = { version = "^1.48.0", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tracing = { workspace = true }
tracing-bunyan-formatter = "0.3.10"
tracing-error = "0.2.1"
tracing-log = "0.2.0"
tracing-subscriber = { version = "^0.3.20", features = ["fmt", "json", "registry", "env-filter"] }
url = "^2.5.7"
ustr = "1.1.0"
uuid = { version = "^1.18.1", features = ["serde", "v4", "v7", "v8"] }
v_exchanges = { workspace = true }
v_utils = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
lazy_static = "1.5.0"

[lints]
workspace = true

[profile.dev]
codegen-backend = "cranelift" #ga: comment out
