[package]
name = "discretionary_engine_macros"
version = "0.1.1"
edition = "2021"
description = "macros for discretionary_engine"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/main.rs"

[dev-dependencies]
trybuild = { version = "^1.0.114", features = ["diff"] }

[dependencies]
quote = "1.0.42"
syn = { version = "2.0.110", features = ["full", "extra-traits"] }
