[package]
name = "discretionary_engine_risk"
version = "1.0.0"
edition = "2024"

license = "MIT"
documentation = "https://docs.rs/discretionary_engine_risk"
repository = "https://github.com/valeratrades/discretionary_engine/tree/master/discretionary_engine_risk"
homepage = "https://github.com/valeratrades/discretionary_engine"
authors = ["valeratrades"]
description = "Risk-management library for discretionary_engine"
readme = "README.md"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
jiff = { workspace = true }
secrecy = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
v_exchanges = { workspace = true, features = ["binance", "bybit", "kucoin", "mexc"] }
v_utils = { workspace = true, features = ["trades"] }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
