[package]
name = "discretionary_engine_strategy"
version = "1.0.0"
edition = "2024"

license = "MIT"
documentation = "https://docs.rs/discretionary_engine_strategy"
repository = "https://github.com/valeratrades/discretionary_engine/tree/master/discretionary_engine_strategy"
homepage = "https://github.com/valeratrades/discretionary_engine"
authors = ["valeratrades"]
description = "Strategy execution engine for discretionary_engine"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
futures-util = "0.3.31"
nautilus-bybit = { path = "../libs/nautilus_trader/crates/adapters/bybit", default-features = false }
nautilus-model = { path = "../libs/nautilus_trader/crates/model" }
tokio = { version = "^1.48.0", features = ["full", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { version = "^0.3.20", features = ["fmt", "env-filter"] }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
